# flake8-sarif

./: README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  example_workflow_for_github_code_scanning.yml  scan.yml
src/flake8_sarif_reporter/: __init__.py  reporters.py  sarifdata.py
